--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,64 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+* {
+  border: 1px solid black;
 }
+
+/* ======= NAVBAR ======= */
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.logo {
+  margin-left: 3%;
+  width: 20%;
+}
+
+.logo h3 {
+  font-size: 1.5rem;
+}
+
+.nav-links {
+  width: 30%;
+  display: flex;
+  justify-content: space-around;
+  font-size: 1.3rem;  
+}
+
+.nav-links a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.nav-links a:hover {
+  color: blue;
+}
+
+/* ======= LOGIN PAGE ======= */
+
+.login {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 40%;
+}
+
 
 .expert {
   border: 1px solid black;
