fixed dashboard search and GET experts

--- a/src/App.css
+++ b/src/App.css
@@ -147,4 +147,4 @@
   filter: invert(31%) sepia(98%) saturate(6669%) hue-rotate(355deg) brightness(101%) contrast(130%);
 }
 
-/* https://codepen.io/sosuke/pen/Pjoqqp */
+https://codepen.io/sosuke/pen/Pjoqqp
