--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@
 }
 
 .expert-voting {
-  width: 30%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -149,7 +149,7 @@
 
 /* ======= EXPERT PAGE ======= */
 
-.expert-component {
+/* .expert-component {
   width: 90%;
 }
 
@@ -170,7 +170,7 @@
     align-items: center;
     justify-content: center;
 }
-
+ */
 
 
 https://codepen.io/sosuke/pen/Pjoqqp
