--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 * {
   font-family: 'Roboto', sans-serif;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 
@@ -149,28 +149,39 @@
 
 /* ======= EXPERT PAGE ======= */
 
-/* .expert-component {
+.expert-component {
   width: 90%;
+}
+
+.expert-component-name {
+  font-size: 2rem;
 }
 
 .expert-detail-card {
   display: flex;
   justify-content: space-between;
+  border: 1px solid rgb(190, 190, 190); 
+  margin: 2% 5%; 
+}
+
+.expert-detail-card-title {
+  font-size: 1.5rem;
 }
 
 .expert-detail-voting-rating-wrapper {
   display: flex;
-  width: 50%
+  width: 20%;
 }
 
 .expert-detail-voting {
-    width: 15%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 1%;
 }
- */
+
 
 
 https://codepen.io/sosuke/pen/Pjoqqp
