--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 * {
   font-family: 'Roboto', sans-serif;
-  /* border: 1px solid black; */
+  border: 1px solid black;
 }
 
 
@@ -54,18 +54,25 @@
 
 /* ======= LOGIN PAGE ======= */
 
-.login {
-  width: 70%;
+.login-container {
+  width: 40%;
+  height: 88.8vh;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.login form {
+/* .login form {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 40%;
+} */
+
+.input-container {
+  color: blue;
+  display: flex;
+  flex-direction: column;
 }
 
 /* ======= EXPERT CARD ======= */
