--- a/src/App.css
+++ b/src/App.css
@@ -55,25 +55,39 @@
 /* ======= LOGIN PAGE ======= */
 
 .login-container {
-  width: 40%;
+  width: 60%;
   height: 88.8vh;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-/* .login form {
+.input-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 40%;
-} */
-
-.input-container {
-  color: blue;
-  display: flex;
-  flex-direction: column;
 }
+
+.input-container input {
+  height: 20px;
+  width: 100%;
+  font-size: 1.2rem;
+}
+
+#error-text {
+  margin-bottom: -5%;
+}
+
+#password-input {
+  margin-top: 10%;
+}
+
+.input-container button {
+  width: 100%;
+  background-color: blue;
+}
+
 
 /* ======= EXPERT CARD ======= */
 
