--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f5f5f5;
-  height: 100%;
+  background-color: #efeff3;
+  height: 100vh;
 }
 
 * {
@@ -342,6 +342,20 @@
     padding: 1%;
 }
 
+/* ======= SELECTCATEGORY FORM ======= */
+.select-category-container {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+}
 
+.form-containers {
+  padding: 1%;
+}
+
+.select-categories {
+  display: flex;
+  flex-direction: column;
+}
 
 https://codepen.io/sosuke/pen/Pjoqqp
