--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 * {
   font-family: 'Roboto', sans-serif;
-  /* border: 1px solid black; */
+  border: 1px solid black;
 }
 
 
@@ -66,6 +66,37 @@
   flex-direction: column;
   align-items: center;
   width: 40%;
+}
+
+/* ======= DASHBOARD PAGE ======= */
+
+.select-category-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.category-list {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 1% 0;
+}
+
+.category {
+  color: rgb(138, 138, 138);
+  border-radius: 5%;
+  background-color: white;
+  font-size: 1.1rem;
+  margin: 0 1%;
+  cursor: pointer;
+  padding: .5%;
+}
+
+.category:hover {
+  background-color: rgb(255, 221, 182); 
 }
 
 /* ======= EXPERT CARD ======= */
