--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,37 @@
   color: #444444;
 }
 
+/* ======= DASHBOARD ======= */
 
 .dashboard {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 70%;
+}
+
+.select-category-form {
+  width: 100%;
+}
+
+.select-category-search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.category-list {
+  display: flex;
+  margin: 3% 0;
+}
+
+.category {
+  margin: 0 .7%;
+}
+
+.category:hover {
+  cursor: pointer;
+  color: #8a8a8a;
 }
 
 /* ======= NAVBAR ======= */
