--- a/src/Components/Expert/ExpertCard.css
+++ b/src/Components/Expert/ExpertCard.css
@@ -2,6 +2,7 @@
 
 .expert {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     width: 90%;
     margin-bottom: 1.7%;
@@ -10,6 +11,17 @@
     padding: .5%;
     filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.25));
   }
+
+  .left-content {
+    width: 60%;
+  }
+
+  .right-content {
+    width: 30%;
+    display: flex;
+    justify-content: space-between;
+  }
+
   
   .expert-img-container {
     width: 13%;
@@ -26,7 +38,6 @@
   .expert-name {
     font-size: 1.6rem;
     margin: 0 0;
-    padding: 1% 0;
   }
   
   .expert-name-link {
@@ -34,27 +45,36 @@
   }
   
   .expert-text {
-    width: 60%;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 1%;
   }
   
   .expert-socials {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     white-space: nowrap;
-    padding: 1% 0;
+  }
+
+  .expert-socials-links {
+    width: 40%;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .expert-twitter {
+    width: 60%;
   }
   
   .expert-youtubeChannel {
-    margin-left: 15%;
     white-space: nowrap;
   }
   
   .expert-category-rating {
     display: flex;
     justify-content: space-evenly;
-    width: 20%;
+    width: 30%;
   }
   
   .expert-category {
@@ -81,17 +101,27 @@
   .upvote-icon {
     width: 20%;
     transform: rotate(-90deg);
+    filter: invert(89%) sepia(10%) saturate(13%) hue-rotate(315deg) brightness(90%) contrast(84%);
   }
   
   .upvote-icon:hover {
-    filter: invert(10%) sepia(81%) saturate(4685%) hue-rotate(248deg) brightness(128%) contrast(159%);
+    filter: invert(32%) sepia(96%) saturate(2947%) hue-rotate(213deg) brightness(103%) contrast(101%);
+    cursor: pointer;
   }
   
   .downvote-icon {
     width: 20%;
     transform: rotate(90deg);
+    filter: invert(89%) sepia(10%) saturate(13%) hue-rotate(315deg) brightness(90%) contrast(84%);
   }
   
   .downvote-icon:hover {
-    filter: invert(31%) sepia(98%) saturate(6669%) hue-rotate(355deg) brightness(101%) contrast(130%);
+    cursor: pointer;
+    filter: invert(60%) sepia(65%) saturate(2803%) hue-rotate(343deg) brightness(102%) contrast(101%);
+  }
+
+  .updated-date {
+    display: flex;
+    padding: 0;
+    margin: 0;
   }
