styled the dashboard and expertCard

--- a/src/Components/Expert/ExpertCard.css
+++ b/src/Components/Expert/ExpertCard.css
@@ -13,7 +13,9 @@
   }
 
   .left-content {
-    width: 60%;
+    width: 70%;
+    margin-left: 1%;
+    padding: 1%;
   }
 
   .right-content {
@@ -58,18 +60,52 @@
   }
 
   .expert-socials-links {
-    width: 40%;
+    width: 100%;
     display: flex;
     flex-direction: row;
   }
 
   .expert-twitter {
     width: 60%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .expert-twitter a {
+    margin-left: 2%;
+    text-decoration: none;
+  }
+
+  .twitter-icon {
+    font-size: 20px;
+  }
+
+  .twitter-icon > path {
+    color: #1DA1F2;
   }
   
   .expert-youtubeChannel {
     white-space: nowrap;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
   }
+
+  .expert-youtubeChannel a {
+    margin-left: 2%;
+    text-decoration: none;
+  }
+
+  .youtube-icon {
+    font-size: 20px;
+  }
+
+  .youtube-icon > path {
+    color: #FF0000;
+  }
+  
   
   .expert-category-rating {
     display: flex;
