--- a/src/Components/Expert/SelectCategoryForm.css
+++ b/src/Components/Expert/SelectCategoryForm.css
@@ -3,6 +3,7 @@
     background-color: white;
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 70%;
   }
   
@@ -70,9 +71,13 @@
 
   .new-category-wrapper {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5%;
   }
 
   .new-category-wrapper p:hover {
     color: #2470ff;
     cursor: pointer;
   }
+
