--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -37,19 +37,21 @@
   .search-button {
     padding: .5%;
     width: 4%;
-    border: 2px solid #E7E7E7;
+    /* border: 1px solid black; */
     border-left: none;
+    background: #E7E7E7;
   }
 
   .search-button:hover {
-    background: #ccc;
+    background: #E7E7E7;
     cursor: pointer;
     text-decoration: none;
-    border: 2px solid #ccc;
+    border: 2px solid black;
   }
 
-  .search-button:focus {
+  .search-button:focus .search-button:active{
     outline:0;
+    background-color: #555555;
   }
   
   .category-list {
@@ -80,3 +82,6 @@
     justify-content: space-between;
   }
   
+  .clickable-filter:hover {
+    cursor: pointer;
+  }
