--- a/src/Components/Expert/ExpertCard.css
+++ b/src/Components/Expert/ExpertCard.css
@@ -50,7 +50,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    font-size: 1rem;
+    font-size: .9rem;
   }
   
   .expert-socials {
@@ -120,5 +120,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: 600;
   }
   
