--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -24,3 +24,20 @@
     display: flex;
     flex-direction: column;
 }
+
+@media only screen and (max-width: 1000px) {
+    .about-container {
+        width: 90%
+    }
+
+    .developer-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .developer {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 5%;
+    }
+}
