--- a/src/Components/Expert/UpvoteDownVoteExpert.css
+++ b/src/Components/Expert/UpvoteDownVoteExpert.css
@@ -38,3 +38,10 @@
     padding: 0;
     margin: 0;
 }
+
+@media only screen and (max-width: 1000px) {
+    .expert-card-voting {
+        width: 20%;
+        margin-right: 1%;
+    }
+}
