--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -46,3 +46,22 @@
     display: flex;
     align-items: center;
   }
+
+  @media only screen and (max-width: 1000px) {
+    .navbar {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .logo {
+      display: flex;
+      justify-content: center; 
+      align-items: center;
+    }
+
+    .nav-links {
+      flex-direction: column;
+      width: 100%;
+      align-items: center;
+    }
+  }
