--- a/src/Components/Expert/UpvoteDownVoteExpert.css
+++ b/src/Components/Expert/UpvoteDownVoteExpert.css
@@ -43,5 +43,12 @@
     .expert-card-voting {
         width: 20%;
         margin-right: 1%;
+        flex-direction: row;
+    }
+
+    .expert-card-voting p {
+        font-size: 1.2rem;
+        margin-left: 10%;
+        margin-right: 10%;
     }
 }
