--- a/src/Components/Expert/ExpertCard.css
+++ b/src/Components/Expert/ExpertCard.css
@@ -138,6 +138,10 @@
       padding: 2%;
    }
 
+   .expert-text {
+     padding: 1%;
+   }
+
    .expert-socials {
      padding: 1%;
      font-size: 12px;
