--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -95,3 +95,13 @@
     opacity: 1;
     right: 0;
   }
+
+  @media only screen and (max-width: 1000px) {
+    .login-container {
+      width: 100%;
+    }
+
+    .input-container {
+      width: 70%;
+    }
+  }
