--- a/src/Components/Signup.css
+++ b/src/Components/Signup.css
@@ -45,4 +45,9 @@
     opacity: 1;
     right: 0;
   }
-  
+
+@media only screen and (max-width: 1000px) {
+  .signup-container {
+    width: 100%;
+  }
+}
